force-app/main/default/objects/FNS_ErrorLog__c/fields/FNS_ApexClass__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApexClass__c</fullName>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>