force-app/main/default/objects/FNS_ErrorLog__c/fields/FNS_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>FNS_ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>