force-app/main/default/objects/FNS_ErrorLog__c/fields/FNS_Method__c.field-meta.xml
<CustomField>
    <fullName>FNS_Method__c</fullName>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>