force-app/main/default/objects/FNS_ErrorLog__c/listViews/FNS_Error_Logs.listView-meta.xml
<ListView>
    <fullName>FNS_Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>FNS_ApexClass__c</columns>
    <columns>FNS_Method__c</columns>
    <columns>FNS_ErrorMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Error Logs</label>
</ListView>